Hecho el filtro de nombre

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".PerfilJuego"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".ActivityMenu" />
         <activity android:name=".ActivityRegistrar" />
         <activity android:name=".SplashActivity" />
-        <activity android:name=".PerfilJuego">
+        <activity android:name=".BusquedaJuegos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
