--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gpixel">
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Usuario.Aplicacion"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PerfilJuego"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ActivityMenu" />
-        <activity android:name=".ActivityRegistrar" />
-        <activity android:name=".SplashActivity" />
-        <activity android:name=".BusquedaJuegos">
+        <activity android:name=".Login.LoginActivity" />
+        <activity android:name=".Login.ActivityRegistrar" />
+        <activity android:name=".Login.ResetPasswordActivity"/>
+        <activity android:name=".Login.SplashActivity"/>
+        <activity android:name=".Login.InicioActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Login.JuegoActivity"></activity>
     </application>
 
 </manifest>
